# Solana-DeFi-Portfolio

./: .dockerignore  .gitignore  Anchor.toml  Cargo.toml  Dockerfile  README.md  readme.md
Frontend/: README.md  index.html  tailwind.config.ts
Frontend/src/: App.tsx  index.css  main.tsx
Frontend/src/components/filters/: SlicerBar.tsx
Frontend/src/hooks/: usePortfolio.ts  useRiskAlerts.ts
Frontend/src/lib/: api.ts  websocket.ts
Frontend/src/pages/: Portfolio.tsx  Risk.tsx  Swap.tsx
Frontend/src/providers/: SolanaWalletProvider.tsx
Frontend/src/slicer/: filtersSlice.ts  index.ts  selectors.ts  store.ts
ai/: .dockerignore  Dockerfile  readme
ai/python/: check_compatibility.py  check_files.py  requirements.txt  test_api_simple.py
ai/python/app/: __init__.py  main.py
ai/python/config/: settings.yaml
ai/python/tests/: __init__.py  conftest.py  test_api.py  test_installation.py  test_services.py
backend/: .dockerignore  .env.development  .env.local  .env.production  .env.test  Cargo.toml  Dockerfile  fly.toml  render.yaml
backend/config/: dev.toml  local.toml
backend/src/: lib.rs  main.rs
backend/src/config/: ai.rs  database.rs  mod.rs  pipeline.rs  risk.rs  server.rs  solana.rs
backend/src/integration/: mod.rs  normalizer.rs  solana_ws.rs
backend/src/models/: event.rs  mod.rs  risk_alert.rs
backend/src/pipeline/: micro_batcher.rs  mod.rs  mpsc_queue.rs  rules_engine.rs
backend/src/server_functions/: mod.rs  portfolio.rs  risk.rs  swap.rs
backend/src/services/: ai_client.rs  metrics.rs  mod.rs  solana_client.rs
backend/src/utils/: mod.rs  telemetry.rs
backend/src/ws/: client.rs  hub.rs  mod.rs
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/app/: page.tsx
frontend/src/pages/: Portfolio.tsx  Swap.tsx
programs/: Anchor.toml  Cargo.toml
programs/amm-pool/: Anchor.toml  Cargo.toml
programs/amm-pool/src/: fees.rs  lib.rs  pool_state.rs  swap_math.rs
programs/amm-pool/src/context/: execute_swap.rs  initialize_pool.rs  mod.rs
programs/portfolio-program/: Anchor.toml  Cargo.toml
programs/portfolio-program/src/: lib.rs  processor.rs  state.rs
programs/portfolio-program/src/context/: mod.rs  record_trade.rs  update_position.rs
programs/tests/: Cargo.toml  swap_test.rs
(+31 files in other folders)
