# backend/Cargo.toml
[package]
name = "solana-defi-backend"
version = "0.1.0"
edition = "2021"
description = "Solana DeFi Portfolio Backend with Risk Management"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/your-username/solana-defi-portfolio"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Environment management
dotenvy = "0.15"

# Error handling
thiserror = "1.0"

# Configuration
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Solana dependencies
solana-client = "1.17"
solana-sdk = "1.17"
solana-program = "1.17"
solana-account-decoder = "1.17"
solana-transaction-status = "1.17"
spl-token = { version = "4.0", features = ["no-entrypoint"] }

# WebSocket
tokio-tungstenite = "0.20"
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde_json = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging and observability
tracing = "0.1"
tracing-subscriber = "0.3"

# Async traits
async-trait = "0.1"
base64 = "0.22.1"
bs58 = "0.4"
bincode = "1.3"  # REMOVE: features = ["serde"]

[dev-dependencies]
tokio-test = "0.4"