[package]
name = "portfolio-program"
version = "0.1.0"
description = "Portfolio Tracking Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "portfolio_program"

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]